--- a/package.json
+++ b/package.json
@@ -34,5 +34,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.1.1"
-  }
+  },
+  "proxy":"http://localhost:3000"
+  
 }
